--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <a href="index.css"></a>
 </head>
 <body>
+    <div>
+        <h1 class="titulo">Actividad1_UND2</h1>
+    </div>
     <div>Alexandra Macedo</div>
 </body>
 </html>
