--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
         <h1 class="titulo">Actividad1_UND2</h1>
     </div>
     <div>Alexandra Macedo</div>
+    <div>
+        19/01/2024
+    </div>
 </body>
 </html>
